fixing login button alignment

--- a/css/index.css
+++ b/css/index.css
@@ -176,6 +176,10 @@ p {
   line-height: 1.4;
   padding-bottom: 10px;
 }
+img {
+  height: auto;
+  width: 100%;
+}
 .container {
   max-width: 1100px;
   width: 100%;
