--- a/less/global.less
+++ b/less/global.less
@@ -34,6 +34,11 @@
     line-height: 1.4;
     padding-bottom: 10px;
   }
+
+  img {
+    height: auto;
+    width: 100%;
+  }
   
   .container {
     max-width: 1100px;
